Wrapped content in scroller (to allow for a cool fixed background)

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -1,8 +1,12 @@
 body {
-  /* background-image: url("images/background.jpg"); */
-  min-height: 100vh; /* Required for bottom prefooter to work */
+  height: 100vh;
   margin: 0;
   position: relative;
+}
+
+.scroller {
+  height: 100vh;
+  overflow: scroll;
 }
 
 /* {
